tests/miniJava/neg/004914_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , Main java ) { return 0 ; } }
